# Ipopt-Exp

./: ChangeLog.md  Makefile.am  Makefile.in  README.md  configure  configure.ac  ipopt.out
benchmark/: Makefile.am  Makefile.in  README.md  run_benchmarks.py  run_cutest_comparison.py  tnlp_adapter_eval_grad_f.cpp  tnlp_adapter_eval_h.cpp
cxx23/: CMakeLists.txt  README.md
cxx23/benchmarks/: anyany_jacobian_product_benchmark.cpp  block_tridiagonal_solver_benchmark.cpp  fgmres_reuse_benchmark.cpp
cxx23/include/ipopt/cxx23/: any_nlp_problem.hpp  block_tridiagonal_solver.hpp  bordered_block_tridiagonal_solver.hpp  bordered_stage_structured_candidate_backend.hpp  bordered_stage_structured_nlp.hpp  candidate_first_backend.hpp  direct_preconditioner.hpp  equality_stage_kkt_assembler.hpp  fgmres.hpp  kkt_operator.hpp  legacy_algorithm_canary.hpp  legacy_aug_system_backend.hpp  legacy_coordinate_adapter.hpp  legacy_ipopt_bridge.hpp  legacy_matrix_snapshot.hpp  primal_dual_bordered_stage_kkt_assembler.hpp  primal_dual_kkt_operator.hpp  primal_dual_stage_kkt_assembler.hpp  restoration_stage_nlp.hpp  solve_session.hpp  sparse_bordered_stage_derivative_provider.hpp  sparse_derivative_scatter.hpp  sparse_stage_derivative_provider.hpp  stage_structured_candidate_backend.hpp  stage_structured_nlp.hpp
cxx23/tests/: adversarial_nlp_test.cpp  any_nlp_problem_test.cpp  block_tridiagonal_solver_test.cpp  bordered_block_tridiagonal_solver_test.cpp  direct_preconditioner_test.cpp  equality_stage_kkt_assembler_test.cpp  fgmres_test.cpp  legacy_algorithm_canary_test.cpp  legacy_aug_system_backend_test.cpp  legacy_coordinate_adapter_test.cpp  legacy_ipopt_bridge_test.cpp  legacy_primal_dual_stage_canary_test.cpp  numerical_primitives_test.cpp  pdfullspace_fgmres_refinement_test.cpp  primal_dual_bordered_stage_kkt_assembler_test.cpp  primal_dual_stage_kkt_assembler_test.cpp  stage_structured_candidate_backend_test.cpp  stage_structured_nlp_test.cpp
doc/: install.dox  main.dox
graphify-out/: .graphify_labels.json  .graphify_learning.json  .graphify_python  .vocab.txt  GRAPH_REPORT.md  MATRIX_FREE_AUDIT.md  MODERNIZATION_REPORT.md  anyany-jacobian-product-benchmark.json  audit_divergent_forks.py  audit_fork_branches.py  benchmark-adapter-workspaces-baseline.json  benchmark-adapter-workspaces-current.json  benchmark-cxx23-current.json  benchmark-cxx23-regression-check.json  benchmark-grad-workspace-baseline.json  benchmark-grad-workspace-current.json  block-tridiagonal-benchmark.json  candidate-first-canary-counts.json  car2-bordered-stage-candidate-benchmark.json  cost.json  cutest-ipopt-comparison.json  cutest-ipopt-dtoc3-confirmation.json  dtoc3-stage-candidate-benchmark.json  fetch_upstream_inventory.py  fgmres-workspace-reuse-benchmark.json  manifest.json  numerical-hardening-benchmark.json  pdfullspace-fgmres-refinement-benchmark.json  screen_fork_branches.py  screen_fork_heads.py  structured-full-kkt-fgmres-benchmark.json
graphify-out/2026-07-22/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
graphify-out/cache/: last_query_stamp  stat-index.json
graphify-out/memory/: query_20260721_160156_как_tnlp_проходит_к_kkt_и_linear_solver__и_где_sma.md  query_20260721_174211_какие_инварианты_reoptimizetnlp_и_кэшей_должен_сох.md  query_20260721_181333_как_tnlpadapter_и_origipoptnlp_преобразуют_fixed_v.md  query_20260721_182457_как_pdfullspacesolver__stdaugsystemsolver_и_tsymli.md  query_20260721_184338_какие_живые_maps_fixed_variables__equality_inequal.md  query_20260721_190603_как_pdfullspacesolver_и_pdsystemsolver_вызывают_au.md  query_20260721_191958_где_безопасно_встроить_c__23_full_system_runtime_c.md  query_20260721_195559_как_restoration_phase_создаёт_pdsystemsolver_и_где.md  query_20260721_202405_где_безопасно_реализовать_opt_in_guarded_replaceme.md  query_20260721_202405_как_честно_сравнивать_текущий_ipopt__clean_head_и.md  query_20260721_202405_почему_workspace_reuse_в_tnlpadapter_мог_дать_solv.md  query_20260721_203606_как_изменился_dtoc3_regression_после_abi_safe_tnlp.md  query_20260721_205813_как_реализовать_reference_free_first_attempt_без_п.md  query_20260721_215731_how_should_an_equality_only_ocp_with_fixed_initial.md  query_20260721_231143_как_live_dtoc3_candidate_first_запрос_проходит_чер.md  query_20260721_233638_как_live_ipopt_full_kkt_проходит_через_bounds__pat.md  query_20260722_011312_how_does_the_live_car2_full_primal_dual_kkt_reach.md  query_20260722_011320_what_is_the_shortest_graph_path_from_the_full_bord.md  query_20260722_014527_где_был_основной_overhead_car2_candidate_и_как_без.md  query_20260722_014538_path_from_cached_coordinate_problem__to_borrownlpp.md  query_20260722_014550_path_from_factorize___to_factorizestagenumerically.md  query_20260722_014652_how_does_the_live_car2_full_primal_dual_kkt_reach.md  query_20260722_022343_как_ускорить_factorizestagenumerically_для_блоков.md  query_20260722_022408_how_does_the_live_car2_full_primal_dual_kkt_reach.md  query_20260722_025554_how_does_the_live_car2_full_primal_dual_kkt_reach.md  query_20260722_031602_изучи_данный_солвер_nlp_и_всего_его_пулл_реквесты.md  query_20260722_031656_how_does_the_live_car2_full_primal_dual_kkt_reach.md  query_20260722_034827_how_does_the_live_car2_full_primal_dual_kkt_reach.md  query_20260722_043222_изучи_данный_солвер_nlp_и_всего_его_пулл_реквесты.md  query_20260722_043229_how_does_the_live_car2_full_primal_dual_kkt_reach.md  query_20260722_045701_изучи_данный_солвер_nlp_и_всего_его_пулл_реквесты.md  query_20260722_045712_how_does_the_live_car2_full_primal_dual_kkt_reach.md  query_20260722_045824_как_убрать_повторные_проходы_валидации_из_car2_fac.md  query_20260722_050956_можно_ли_ускорить_fixed_size_invertstagenumericall.md  query_20260722_053149_изучи_данный_солвер_nlp_и_всего_его_пулл_реквесты.md  query_20260722_053159_изучи_данный_солвер_nlp_и_всего_его_пулл_реквесты.md  query_20260722_060827_изучи_данный_солвер_nlp_и_всего_его_пулл_реквесты.md  query_20260722_060908_изучи_данный_солвер_nlp_и_всего_его_пулл_реквесты.md  (+37 more)
graphify-out/reflections/: LESSONS.md
test/: getcurr.cpp
(+26 files in other folders)
